<resources>
    <string name="app_name">MusicClicker</string>
    <string name="app_title">Music Clicker</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="credits_text_1">The app was made by Patryk Kudyk</string>
    <string name="credits_text_2">Icons were made by Freepik from flaticon.com</string>
    <string name="game_fast">Fast</string>
    <string name="game_long">Long</string>
    <string name="game_endless">Endless</string>
    <string name="limit_fast">Until 5 000 000</string>
    <string name="limit_long">Until 5 000 000 000</string>
    <string name="second_income">Second income</string>
    <string name="back">Back</string>
    <string name="owned">Owned</string>
    <string name="upgrade">Upgrade</string>
    <string name="income">Income</string>
    <string name="cost">Cost</string>
    <string name="money_too_much">Too much money brah</string>
    <string name="one_per_tap">One per tap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>