<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recycler_row_instrument_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/colorMainLightLight"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/colorMainDarkDark"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="25"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardBackgroundColor="@color/colorMainLightLightLight"
                app:cardCornerRadius="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/colorMainDarkDark"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/recycler_row_instrument_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:src="@drawable/lvl1002" />


            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="70"
                android:orientation="vertical"
                android:weightSum="100">

                <TextView
                    android:id="@+id/recycler_row_instrument_owned"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:fontFamily="@font/dustismo_bold"
                    android:gravity="center"
                    android:textSize="24dip"
                    tools:text="Owned 50" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="25"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:fontFamily="@font/dustismo_bold"
                        android:gravity="end|center_vertical"
                        android:text="@string/income"
                        android:textSize="24dip" />

                    <TextView
                        android:id="@+id/recycler_row_instrument_income"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:fontFamily="@font/dustismo_bold"
                        android:gravity="end|center_vertical"
                        android:textSize="24dip"
                        tools:text="2 000" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/money" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:fontFamily="@font/dustismo_bold"
                        android:gravity="end|center_vertical"
                        android:text="@string/cost"
                        android:textSize="24dip" />

                    <TextView
                        android:id="@+id/recycler_row_instrument_cost"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:fontFamily="@font/dustismo_bold"
                        android:gravity="end|center_vertical"
                        android:textSize="24dip"
                        tools:text="2 000" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/money" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3" />


                <Button
                    android:id="@+id/recycler_row_instrument_upgrade"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="20"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/button_background_green_green"
                    android:text="@string/upgrade"
                    android:textColor="@color/colorBackground" />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>